<?xml version="1.0" encoding="utf-8"?>

<!--
activity_first_real_app_main.xml
Creates layout for main activity
Created by: Anthony Powell
Created on: 2/17/15
Last Modified by: Anthony Powell
Last Modified on: 2/19/15
Assignment/Project: A290 Android Development
Part of: Project 3 - A290 First Real Application
-->

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.indiana.a290firstrealapplication.FirstRealAppMainActivity" >

    <!-- displays main title -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/MainTitle"
        android:textSize="24.5sp" />

    <!-- creates 4 buttons: New Game, Continue, About, and Exit -->

    <Button
        android:id="@+id/ContinueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ContinueButtonLabel" />

    <Button
        android:id="@+id/NewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewButtonLabel" />

    <Button
        android:id="@+id/AboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AboutButtonLabel" />

    <Button
        android:id="@+id/ExitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExitButtonLabel" />

</LinearLayout>
